--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(cornelis_test_runner
     test_FrameBuffer.cpp
     test_Color.cpp
     test_Camera.cpp
+    test_Scene.cpp
 )
 target_link_libraries(cornelis_test_runner PUBLIC corneliscore Catch2::Catch2WithMain)
 
