--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,7 @@ add_library(corneliscore STATIC
 )
 target_compile_features(corneliscore PUBLIC cxx_std_20)
 target_include_directories(corneliscore PUBLIC "${PROJECT_SOURCE_DIR}/include")
-target_include_directories(corneliscore PUBLIC "${PROJECT_SOURCE_DIR}/external")
+target_include_directories(corneliscore SYSTEM PUBLIC "${PROJECT_SOURCE_DIR}/external")
 target_link_libraries(corneliscore PUBLIC tbb)
 
 add_executable(cornelis
@@ -20,3 +20,6 @@ add_executable(cornelis
 target_link_libraries(cornelis PUBLIC corneliscore )
 target_compile_features(cornelis PUBLIC cxx_std_20)
 target_include_directories(cornelis PRIVATE "${PROJECT_SOURCE_DIR}/external")
+
+cornelis_all_warnings(corneliscore)
+cornelis_all_warnings(cornelis)
