--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(cornelis_test_runner
     test_Sampling.cpp
     test_Tiles.cpp
     test_Math.cpp
+    test_Linalg.cpp
 )
 target_link_libraries(cornelis_test_runner PUBLIC corneliscore Catch2::Catch2WithMain)
 
