Fixed several light propagation bugs. Added SoA support objects. Moved main render loop to use a data oriented style over  rays.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(cornelis_test_runner
     test_Tiles.cpp
     test_Math.cpp
     test_Linalg.cpp
+    test_SoA.cpp
 )
 target_link_libraries(cornelis_test_runner PUBLIC corneliscore Catch2::Catch2WithMain)
 
