--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,4 @@
+
 include(FetchContent)
 
 FetchContent_Declare(
@@ -8,6 +9,18 @@ FetchContent_Declare(
 
 FetchContent_MakeAvailable(xsimd)
 
+
+FetchContent_Declare(
+  fmtlib
+  GIT_REPOSITORY https://github.com/fmtlib/fmt.git
+  GIT_TAG        8.1.0
+)
+FetchContent_MakeAvailable(fmtlib)
+
+
+add_subdirectory(extern)
+
+
 add_library(corneliscore STATIC
     FrameBuffer.cpp
     NanoVDBMath.cpp
@@ -17,9 +30,10 @@ add_library(corneliscore STATIC
     Render.cpp
     Random.cpp
     Tiles.cpp
-    Objects.cpp
     Linalg.cpp
     SoA.cpp
+    SceneDescription.cpp
+    Geometry.cpp
 
     extern/stb_image_write.cpp
 )
@@ -28,6 +42,7 @@ target_include_directories(corneliscore PUBLIC "${PROJECT_SOURCE_DIR}/include")
 target_include_directories(corneliscore SYSTEM PUBLIC "${PROJECT_SOURCE_DIR}/external")
 target_link_libraries(corneliscore PUBLIC xsimd)
 target_link_libraries(corneliscore PUBLIC tbb)
+target_link_libraries(corneliscore PUBLIC fmt::fmt loguru)
 
 add_executable(cornelis
     cornelis.cpp)
