Most of the internal types now work with SoA types. - Scene format changed. - Intersection data is stored in a SoA. - Tried to get rid of V3 at most places, some still remain. - Our own sphere intersection code. - Small linear algebra helpers for places where it's most convenient. - Some SoA helpers.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,8 @@ add_library(corneliscore STATIC
     Objects.cpp
     Linalg.cpp
     SoA.cpp
+    SceneDescription.cpp
+    Geometry.cpp
 
     extern/stb_image_write.cpp
 )
